# OpenQuest

./: .gitmodules  README.md
Coprocessor program/: .gitignore  Cargo.toml  output.car.json  output.cid  output.size
Coprocessor program/src/: main.rs
contracts/: .env.example  interaction.txt  remappings.txt
contracts/broadcast/deployFactory.s.sol/17000/: run-1739644431.json  run-1739645526.json  run-1739645605.json  run-1739646602.json  run-1739647119.json  run-1739648673.json  run-1739649430.json  run-latest.json
contracts/deployment_history/: deployment_2025-02-13_19-56-45.json  deployment_2025-02-13_23-40-34.json  deployment_2025-02-14_00-28-35.json
contracts/script/: Counter.s.sol  deployFactory.s.sol
contracts/src/: ICoprocessorAdapter.sol  IProtocol.sol  MyContract.sol  demo_quest.sol  factory.sol  mockToken.sol  protocol.sol  protocol_factory.sol  quest.sol  quest_nft.sol
contracts/test/: Counter.t.sol  dummyTaskIssuer.sol
frontend/: middleware.ts
frontend/app/admin/: page.tsx
frontend/app/admin/hackathons/new/: page.tsx
frontend/app/admin/protocols/[id]/hackathons/: page.tsx
frontend/app/admin/protocols/[id]/quizzes/: page.tsx
frontend/app/admin/protocols/[id]/staff/: page.tsx
frontend/app/admin/quizzes/new/: page.tsx
frontend/app/admin/users/: page.tsx
frontend/app/hackathons/[id]/: page.tsx
frontend/app/hackathons/[id]/dashboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/protocols/[id]/: page.tsx
frontend/app/protocols/new/: page.tsx
frontend/app/quizzes/: page.tsx
frontend/app/quizzes/[id]/: page.tsx
frontend/app/quizzes/[id]/results/: page.tsx
frontend/components/hackathon/: project-submission.tsx  team-management.tsx
frontend/components/providers/: web3-provider.tsx
frontend/components/quiz/: quiz-intro.tsx
frontend/lib/: health.ts
frontend/services/: auth-service.ts
frontend/types/: quiz.ts
server/: .env.example  Cargo.toml
server/abi/: ProtocolABI.json  ProtocolFactoryABI.json  QuizContractABI.json
server/src/: main.rs
server/src/models/: mod.rs  protocol_model.rs  quiz_model.rs  user_model.rs
server/src/routes/: health_routes.rs  mod.rs  protocol_routes.rs  user_routes.rs
server/src/routes/quizes_routes/: hacker_quize_route.rs  mod.rs  protocol_quiz_route.rs
server/src/services/: db.rs  mod.rs  quiz_services.rs
server/src/utils/: api_response.rs  jwt.rs
