[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
zstd = "0.13.2"
base64 = "0.22.1"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
rand = "0.9.0"
rand_chacha = "0.9.0"
hex = "0.4.3"
bincode = "1.3.3"