[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-lab = "0.23.0"
alloy = "0.11.0"
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
json = "0.12.4"
jsonwebtoken = "9.3.1"
mongodb = "3.2.1"
serde = {version = "1.0.217", features = ["derive"]}
sha2 = "0.10.8"
tokio = "1.43.0"
uuid = { version = "1.13.1", features = ["serde", "v4"] }

